@@ -50,6 +50,10 @@ public class AddUpdateCommand extends UpdateCommand implements Iterable<IndexDoc
    public Term updateTerm;
 
    public int commitWithin = -1;
+
+   public boolean isLastDocInBatch = false;
+
+   public int pollQueueTime = 0;
    
    public AddUpdateCommand(SolrQueryRequest req) {
      super(req);
@@ -65,6 +69,7 @@ public class AddUpdateCommand extends UpdateCommand implements Iterable<IndexDoc
      solrDoc = null;
      indexedId = null;
      updateTerm = null;
+     isLastDocInBatch = false;
      version = 0;
    }
 
